--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 <style> 
 	body  {
 	  background-image: url("canal.jpg");           
-	  background-size: 1269px 843px;
+	  background-size: 100% auto;
 	  background-repeat: no-repeat; 
+	  margin: 1%; 
 	}
 </style>
 	<meta charset="UTF-8">
