--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
 <h1>Sistema de Monitoreo Satelital de las Plantaciones de Caña de Azúcar en CoopeVictoria R.L. </h1>
 
-<div class="row">
-  <div class="column" style="background:rgba(255,255,255,.85)">
+<div class="row" style="margin-left: 50px; margin-right: 50px;margin-top: 80px; padding: 1em 1em 1em 1em; border-width: 1px; border-color: grey; border-style:solid;background-color:rgba(255,255,255,.75">
+<div class="column">
     <h2>SMS-CoopeVictoria R.L.</h2>
     <p>Sistema de Monitoreo Satelital de las Plantaciones de Caña de Azúcar en CoopeVictoria R.L. pretende apoyar la gestión de las áreas de cultivo mediante información satelital. Esta iniciativa desarrolla de forma colaborativa entre el Centro de Investigaciones Agronómicas (<a href="http://www.cia.ucr.ac.cr/">CIA</a>) de la Universidad de Costa Rica (<a href="https://www.ucr.ac.cr/">UCR</a>) y
 	<a href="https://www.coopevictoria.com/">CoopeVictoria R.L.</a> surge por la necesidad de dotar de herramientas de agricultura de precisión al sector cooperativo costarricense.</p>
