--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <style> 
 	body  {
 	  background-image: url("canal.jpg");           
-	  background-size: 100% ;
+	  background-size: 100% auto;
 	  background-repeat: no-repeat; 
 	  margin: 1%; 
 	}
