--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 	 <p><strong>- Distritos de Influencia.</strong></p>
 	 <p><strong>- Historial de Cosecha por Finca.</strong></p>
 	 <p><strong>- NDVI Calculado con el Sensor Sentinel 2 el 15/05/2021 .</strong></p>    <!-- CAMBIE LA FECHA DE LA DE NDVI -->
-
+</div>
+	<div class="column">
 	  <h2> Características de la información suministrada.</h2>
 	<p> <strong>El NDVI es un índice de vegetación </strong>que está fuertemente relacionado con la porción fotosintéticamente activa de la vegetación. En caña de azúcar los valores rondan entre 0,25 (cuando inician los rebrotes) y 0,8 (previo al inicio de estrés de la planta por maduración). Esos valores variaran según: manejo, variedad, condiciones atmosféricas, entre otras.</br>
 </br>
