--- a/index.html
+++ b/index.html
@@ -2,73 +2,80 @@
 <html lang="es">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<!-- Hoja de estilos CSS adicionales -->
-	<link rel="stylesheet" type="text/css" href="style.css">	
-	<link rel="stylesheet" type="text/css" href="./style_barra.css">
-
-
 <head>
-
-<title>Plantaciones de caña de azúcar en CoopeVictoria R.L.</title>  
+	<!-- Hoja de estilos CSS adicionales -->
+		<link rel="stylesheet" type="text/css" href="styles.css">	
+		<link rel="stylesheet" type="text/css" href="style_barra.css">
+<html>
+<head>
+<style>
+h1 {
+  text-shadow: 2px 2px 5px white;
+}
+</style>
+</head>
+<body>
+ <title>Plantaciones de Palma de Aceite en CoopeCalifornia R.L.
+ </title>  
 
 <style> 
 	body  {
-	  background-image: url("canal.jpg");           
+	  background-image: url("canal.JPG");           
 	  background-size: 100% auto;
 	  background-repeat: no-repeat; 
-	  margin: 1%; 
+	  margin: 1%;
+	  
 	}
 </style>
+	
 	<meta charset="UTF-8">
-
 	
 </script>
 	
 </head>
+	
 <body>
 
-
-<div class="row">
+<div class="row" >
 <div class="topnav">
-  <a class="active" href="index.html">Principal</a>
-  <a href="smscopevictoria.html">SMS-CoopeVictoria R.L.</a>
-  <a href="contactos.html">Contactos</a>
+  	<a class="active" href="index.html">Principal</a>
+  	<a href="smscopevictoria.html">SMS-CoopeCalifornia R.L.</a>
+  	<a href="contactos.html">Contactos</a>
 </div>
 
-<h1>Sistema de Monitoreo Satelital de las Plantaciones de Caña de Azúcar en CoopeVictoria R.L. </h1>
+<h1>Sistema de Monitoreo Satelital de las Plantaciones de Palma de Aceite en CoopeCalifornia R.L. </h1>
 
 <div class="row" style="margin-left: 50px; margin-right: 50px;margin-top: 80px; padding: 1em 1em 1em 1em; border-width: 1px; border-color: grey; border-style:solid;background-color:rgba(255,255,255,.75">
 <div class="column">
-    <h2>SMS-CoopeVictoria R.L.</h2>
-    <p>Sistema de Monitoreo Satelital de las Plantaciones de Caña de Azúcar en CoopeVictoria R.L. pretende apoyar la gestión de las áreas de cultivo mediante información satelital. Esta iniciativa desarrolla de forma colaborativa entre el Centro de Investigaciones Agronómicas (<a href="http://www.cia.ucr.ac.cr/">CIA</a>) de la Universidad de Costa Rica (<a href="https://www.ucr.ac.cr/">UCR</a>) y
-	<a href="https://www.coopevictoria.com/">CoopeVictoria R.L.</a> surge por la necesidad de dotar de herramientas de agricultura de precisión al sector cooperativo costarricense.</p>
+  		<h2>SMS-CoopeCalifornia R.L.</h2>
+    		<p>Sistema de Monitoreo Satelital de las Plantaciones de Palma de Aceite en CoopeCalifornia R.L. pretende apoyar la gestión de las áreas de cultivo mediante información satelital. Esta iniciativa desarrollada de forma colaborativa entre el Centro de Investigaciones Agronómicas (<a href="http://www.cia.ucr.ac.cr/">CIA</a>) de la Universidad de Costa Rica (<a href="https://www.ucr.ac.cr/">UCR</a>) y CoopeCalifornia R.L. surge por la necesidad de dotar de herramientas del monitoreo a la Cooperativa, con la cual puedan tener acceso rápido a información de interes para la gestión de las plantaciones.</p>
 	
-	<p>La pestaña SMS-CoopeVictoria R.L. cuanta con información histórica y actual sobre las plantaciones de caña de azúcar administradas por la Cooperativa, donde usted encontrará la siguiente información:</p>
-	 <p><strong>- Áreas de Producción.</strong></p>
-	 <p><strong>- Distritos de Influencia.</strong></p>
-	 <p><strong>- Historial de Cosecha por Finca.</strong></p>
-	 <p><strong>- NDVI Calculado con el Sensor Sentinel 2 el 15/05/2021 .</strong></p>    <!-- CAMBIE LA FECHA DE LA DE NDVI -->
+		<p>La pestaña SMS-CoopeCalifornia R.L. cuenta con información histórica y actual sobre las plantaciones de palma de aceite administradas por la Cooperativa y sus asociados, donde usted encontrará la siguiente información:</p>
+		<p><strong>- Áreas de Producción.</strong></p>
+	 	<p><strong>- Historial de Cosecha por Finca.</strong></p>
 </div>
-	<div class="column">
-	  <h2> Características de la información suministrada.</h2>
-	<p> <strong>El NDVI es un índice de vegetación </strong>que está fuertemente relacionado con la porción fotosintéticamente activa de la vegetación. En caña de azúcar los valores rondan entre 0,25 (cuando inician los rebrotes) y 0,8 (previo al inicio de estrés de la planta por maduración). Esos valores variaran según: manejo, variedad, condiciones atmosféricas, entre otras.</br>
-</br>
-Los valores que encontrará en la pestaña <strong>SMS-CoopeVictoria R.L.</strong> deberán ser dividos entre 100 para reescalarlos de 0 - 1. Variaciones temporales abruptas en el índice pueden estar relacionadas factores atmosféricos (nubes o sombras de nubes). </br>
-</br>
-El estimado de rendimiento fue calculados con base a regresiones lineales múltiples que buscan explicar la variación del rendimiento de campo en función al a índices de vegetación y variables históricas del cultivo, esta información la puede encontrar en la pestaña <strong>Historial de Cosecha por Finca</strong>.
 
-<center>
-	<img src="logoucr.png" alt="Logo UCR" width="385" height="75" align=”middle”><img src="logocia.png" alt="Logo del CIA" width="180" height="75" align=”middle”><img src="logocoope.png" alt="Logo de CoopeVictoria R.L." width="200" height="80" align=”middle”>
-  </center>
-</p>
-
-
+<!-- Aquí inicia la segunda columna -->
 	
-	</div>
+<div class="column">
+ 	<h2> Seguimiento de las Plantaciones con Información Satelital.</h2>
+		<p> Este modulo brinda a los usuarios la posibilidad de observar la variabilidad espacial y temporal de las plantaciones a través de un App construdio en Google Earth Engine. Este App permite, entre otras cosas, analizar la variabilidad temporal del índice de vegetación NDVI</br>
 
+		<center>
+			<a title="Sentinel 2" href="https://jesusc461.users.earthengine.app/view/exploradors2" target="_blank" rel="noopener noreferrer"><img src="gee.png" alt="Sentinel 2" width="75" height="75" align=”middle” /><a title="LandSat 8" href="https://jesusc461.users.earthengine.app/view/explorador" target="_blank" rel="noopener noreferrer"><img src="gee.png" alt="LandSat 8" width="75" height="75" align=”middle” /></a>
+		</center>
+		
+		<div> <center> <h2> Sentinel 2               Landsat 8 </h2> </center> </div>
+			
+  		<p> El índice de vegetación NDVI esta relacionado con la porción fotosintéticamente activa de la vegetación; valores cercanos a 0,9 representantan alta cantidad de vegetación y valores cercanos a 0,2 representan suelo descubierto. Variaciones temporales abruptas en el índice pueden estar relacionadas factores atmosféricos (nubes o sombras de nubes). </br>
+		</p>
+	        <center>
+	        <img src="logoucr.png" alt="Logo UCR" width="470" height="100" align=”middle”><img src="logocia.png" alt="Logo del CIA" width="240" height="98" align=”middle”><img src="logocoope.png" alt="Logo de CoopeCalifornia R.L." width="100" height="100" align=”middle”>
+                </center>
+</div>
 
- </div>
+</div>
+	
 	
 </body>
 </html>
-
