--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ h1 {
 </style>
 </head>
 <body>
- <title>Plantaciones de Palma de Aceite en CoopeCalifornia R.L.
+ <title>Plantaciones de caña de azúcar en CoopeVictoria R.L.
  </title>  
 
 <style> 
@@ -39,20 +39,17 @@ h1 {
 <div class="row" >
 <div class="topnav">
   	<a class="active" href="index.html">Principal</a>
-  	<a href="smscopevictoria.html">SMS-CoopeCalifornia R.L.</a>
+  	<a href="smscopevictoria.html">SMS-CoopeVictoria R.L.</a>
   	<a href="contactos.html">Contactos</a>
 </div>
 
-<h1>Sistema de Monitoreo Satelital de las Plantaciones de Palma de Aceite en CoopeCalifornia R.L. </h1>
+<h1>Sistema de Monitoreo Satelital de las Plantaciones de Caña de Azúcar en CoopeVictoria R.L. </h1>
 
 <div class="row" style="margin-left: 50px; margin-right: 50px;margin-top: 80px; padding: 1em 1em 1em 1em; border-width: 1px; border-color: grey; border-style:solid;background-color:rgba(255,255,255,.75">
 <div class="column">
-  		<h2>SMS-CoopeCalifornia R.L.</h2>
-    		<p>Sistema de Monitoreo Satelital de las Plantaciones de Palma de Aceite en CoopeCalifornia R.L. pretende apoyar la gestión de las áreas de cultivo mediante información satelital. Esta iniciativa desarrollada de forma colaborativa entre el Centro de Investigaciones Agronómicas (<a href="http://www.cia.ucr.ac.cr/">CIA</a>) de la Universidad de Costa Rica (<a href="https://www.ucr.ac.cr/">UCR</a>) y CoopeCalifornia R.L. surge por la necesidad de dotar de herramientas del monitoreo a la Cooperativa, con la cual puedan tener acceso rápido a información de interes para la gestión de las plantaciones.</p>
-	
-		<p>La pestaña SMS-CoopeCalifornia R.L. cuenta con información histórica y actual sobre las plantaciones de palma de aceite administradas por la Cooperativa y sus asociados, donde usted encontrará la siguiente información:</p>
-		<p><strong>- Áreas de Producción.</strong></p>
-	 	<p><strong>- Historial de Cosecha por Finca.</strong></p>
+  		<h2>SMS-CoopeVictoria R.L.</h2>
+    <p>Sistema de Monitoreo Satelital de las Plantaciones de Caña de Azúcar en CoopeVictoria R.L. pretende apoyar la gestión de las áreas de cultivo mediante información satelital. Esta iniciativa desarrolla de forma colaborativa entre el Centro de Investigaciones Agronómicas (<a href="http://www.cia.ucr.ac.cr/">CIA</a>) de la Universidad de Costa Rica (<a href="https://www.ucr.ac.cr/">UCR</a>) y
+	<a href="https://www.coopevictoria.com/">CoopeVictoria R.L.</a> surge por la necesidad de dotar de herramientas de agricultura de precisión al sector cooperativo costarricense.</p>
 </div>
 
 <!-- Aquí inicia la segunda columna -->
