--- a/contactos.html
+++ b/contactos.html
@@ -38,8 +38,9 @@
 <br> 
 Desarrollado por: <br> 
  <strong>Bryan Alemán Montes</strong> (bryan.aleman@ucr.ac.cr)<br>
- <strong>Carlos Henríquez Henríquez</strong> (carlos.henriquez@ucr.ac.cr)
- 
+ <strong>Carlos Henríquez Henríquez</strong> (carlos.henriquez@ucr.ac.cr)<br> 
+ <strong>Emmanuel Jesús Céspedes Rivera</strong> (emmanuel.cespedes@ucr.ac.cr)</p>
+
  
 <div class="row" style="background:rgba(255,255,255,.85);margin-top: 80px;"> 
  <center>
