--- a/contactos.html
+++ b/contactos.html
@@ -11,8 +11,10 @@
 <style> 
 	body  {
 	  background-image: url("canal.jpg");           
-	  background-size: 1269px 843px;
+	  background-size: 200% 200%;
 	  background-repeat: no-repeat; 
+	  margin: 1%;
+	  
 	  
 	}
 </style>
