--- a/smscopevictoria.html
+++ b/smscopevictoria.html
@@ -48,6 +48,14 @@
   <a class="active"  href="smscopevictoria.html">SMS-CoopeVictoria R.L.</a>
   <a href="contactos.html">Contactos</a>
 </div>
+<html>
+<head>
+<style>
+h1 {
+  text-shadow: 2px 2px 5px white;
+}
+</style>
+</head>
 
 <h1 style="text-align:center;margin-left: 100px; margin-right: 100px;" >Sistema de Monitoreo Satelital de las Plantaciones de Caña de Azúcar en CoopeVictoria R.L. </h1>
 
