--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ h1 {
   	<a class="active" href="index.html">Principal</a>
   	<a href="smscopevictoria.html">SMS-CoopeVictoria R.L.</a>
   	<a href="contactos.html">Contactos</a>
-	<a href="clima_index.html">Contactos2</a>
+	<a href="clima_index.html">Sección climática</a>
 </div>
 
 <h1>Sistema de Monitoreo Satelital de las Plantaciones de Caña de Azúcar en CoopeVictoria R.L. </h1>
