--- a/smscopevictoria.html
+++ b/smscopevictoria.html
@@ -47,6 +47,7 @@
   <a href="index.html">Principal</a>
   <a class="active"  href="smscopevictoria.html">SMS-CoopeVictoria R.L.</a>
   <a href="contactos.html">Contactos</a>
+  <a href="clima_index.html">Sección climática</a>
 </div>
 
 
