--- a/contactos.html
+++ b/contactos.html
@@ -28,6 +28,7 @@
   <a href="index.html">Principal</a>
   <a href="smscopevictoria.html">SMS-CoopeVictoria R.L.</a>
   <a class="active" href="contactos.html">Contactos</a>
+  <a href="clima_index.html">Sección climática</a>
 </div>
 <html>
 <head>
