--- a/clima_index.html
+++ b/clima_index.html
@@ -41,6 +41,7 @@ h1 {
   	<a class="active" href="index.html">Principal</a>
   	<a href="smscopevictoria.html">SMS-CoopeVictoria R.L.</a>
   	<a href="contactos.html">Contactos</a>
+	<a href="clima_index.html">Sección climática</a>
 </div>
 
 <h1>Sistema de Monitoreo climatico </h1>
