--- a/clima_index.html
+++ b/clima_index.html
@@ -46,7 +46,8 @@ h1 {
 
 <h1>Sistema de Monitoreo climatico </h1>
 
-	iframe id="inlineFrameExample"
+	
+	<iframe id="inlineFrameExample"
     title="Inline Frame Example"
     width="300"
     height="200"
