--- a/clima_index.html
+++ b/clima_index.html
@@ -46,15 +46,11 @@ h1 {
 
 <h1>Sistema de Monitoreo climatico </h1>
 
-	
-	<iframe id="inlineFrameExample"
+	<iframe
+		id="inlineFrameExample"
     title="Inline Frame Example"
     width="300"
     height="200"
-    src="https://api.open-meteo.com/v1/ecmwf?latitude=9.93&longitude=-84.05&hourly=temperature_2m,windspeed_10m,winddirection_10m">
-</iframe>
-	
-	<iframe
 function llamarClima1(lat,lon){
 
                 //url = 'https://api.open-meteo.com/v1/ecmwf?latitude=9.93&longitude=-84.05&hourly=temperature_2m,windspeed_10m,winddirection_10m';
