--- a/clima_index.html
+++ b/clima_index.html
@@ -46,8 +46,15 @@ h1 {
 
 <h1>Sistema de Monitoreo climatico </h1>
 
-<div>
-<hr/>
+<head>
+  <meta charset="utf-8" />
+  <title>Open-Meteoのサンプル</title>
+</head>
+<body>
+  <h1>Open-Meteoのサンプル</h1>
+  <canvas id="stage"></canvas>
+  
+  <hr/>
   
   <!-- 「Open-Meteo」の帰属表示 -->
   <small><a href="https://open-meteo.com/">Weather data by Open-Meteo.com</a></small>
@@ -82,8 +89,8 @@ h1 {
         data: mydata,
       });
     }
-	
-</div>
+
+  </script>
 	
 	
 	
