--- a/clima_index.html
+++ b/clima_index.html
@@ -46,7 +46,7 @@ h1 {
 
 <h1>Sistema de Monitoreo climatico </h1>
 
-	<iframe src="/default.asp" width="100%" height="300" style="border:1px solid black;">
+	<iframe width="100%" height="300" style="border:1px solid black;">
 
 <head>
   <meta charset="utf-8" />
