--- a/clima_index.html
+++ b/clima_index.html
@@ -55,7 +55,7 @@ h1 {
   <h1>Datos climáticos de temperatura</h1> 
 
 <!-- Current Date and Time -->
-Get Current Date and Time Both:
+Fecha y hora actual:
 <input type="text" id="currentDateTime">
 <br><br>
 <script>
