--- a/clima_index.html
+++ b/clima_index.html
@@ -44,6 +44,9 @@ h1 {
 	<a href="clima_index.html">Sección climática</a>
 </div>
 
+<style> 
+	body  {
+	  
 <h1>Sistema de Monitoreo climatico </h1>
 <div>
 
@@ -64,7 +67,7 @@ var date = today.getFullYear()+'-'+(today.getMonth()+1)+'-'+today.getDate();
 var time = today.getHours() + ":" + today.getMinutes() + ":" + today.getSeconds();
 var dateTime = date+' '+time;
   document.getElementById("currentDateTime").value = dateTime;
-</script>
+
 
 </script>
   <canvas id="stage"></canvas>
@@ -106,6 +109,8 @@ var dateTime = date+' '+time;
     }
 
   </script>
+	  
+	
 
 </div>
 	
