--- a/clima_index.html
+++ b/clima_index.html
@@ -44,7 +44,8 @@ h1 {
 	<a href="clima_index.html">Sección climática</a>
 </div>
 
-	  
+<div>	 
+	
 <h1>Sistema de Monitoreo climatico </h1>
 <div>
 
@@ -108,7 +109,7 @@ var dateTime = date+' '+time;
         data: mydata,
       });
     }
-
+</div>
   </script>
 </div>
 	
