--- a/clima_index.html
+++ b/clima_index.html
@@ -56,6 +56,9 @@ h1 {
   <h1>Datos climáticos de temperatura</h1> 
 </div>
 
+
+<div
+
 <div>
 <!-- Current Date and Time -->
 Fecha y hora actual:
@@ -111,8 +114,8 @@ var dateTime = date+' '+time;
       });
     }
 
+
   </script>
-  </div>
 </div>
 
 	
