--- a/clima_index.html
+++ b/clima_index.html
@@ -73,7 +73,7 @@ var dateTime = date+' '+time;
 
 
 </script>
-  <canvas id="stage" width="10" height="60"></canvas>
+  <canvas id="stage" width=2px  height=2px></canvas>
   
   <small><a href="https://open-meteo.com/">Weather data by Open-Meteo.com</a></small>
 
