--- a/clima_index.html
+++ b/clima_index.html
@@ -79,7 +79,7 @@ var dateTime = date+' '+time;
 
 
 </script>
-  <canvas id="stage" ></canvas>
+  <canvas id="stage" width=2px  height=2px></canvas>
   
   <hr/>
   
