--- a/clima_index.html
+++ b/clima_index.html
@@ -73,13 +73,13 @@ var dateTime = date+' '+time;
 
 
 </script>
-  <canvas id="stage" width=2px  height=2px></canvas>
+  <canvas id="stage"></canvas>
   
   <small><a href="https://open-meteo.com/">Weather data by Open-Meteo.com</a></small>
 
 
 </script>
-  <canvas id="stage" width=2px  height=2px></canvas>
+  <canvas id="stage" width=2px height=2px></canvas>
   
   <hr/>
   
@@ -111,6 +111,8 @@ var dateTime = date+' '+time;
       new Chart(document.getElementById('stage'), {
         type: 'line',
         data: mydata,
+	 width: 2px,
+	 height: 2px,
       });
     }
 
