--- a/clima_index.html
+++ b/clima_index.html
@@ -44,7 +44,10 @@ h1 {
 	<a href="clima_index.html">Sección climática</a>
 </div>
 
- 
+<div class="split right">
+  <div class="centered">
+    
+
 <h1>Sistema de Monitoreo climatico </h1>
 <div>
 
@@ -113,7 +116,8 @@ var dateTime = date+' '+time;
         data: mydata,
       });
     }
-
+  </div>
+</div>
 
   </script>
 </div>
