--- a/clima_index.html
+++ b/clima_index.html
@@ -52,7 +52,7 @@ h1 {
 <div>
 
 	
-	<div class="split right">
+	<div class="split left">
   <div class="centered">
 	  
 <head>
@@ -60,7 +60,7 @@ h1 {
   <title>Open-Meteoのサンプル</title>
 </head>
 <body>
-  <h1>Datos climáticos de temperatura</h1> 
+  <h2>Datos climáticos de temperatura</h2> 
 </div>
 
 
@@ -116,6 +116,7 @@ var dateTime = date+' '+time;
       new Chart(document.getElementById('stage'), {
         type: 'line',
         data: mydata,
+	fill: true,
       });
     }
 
