--- a/clima_index.html
+++ b/clima_index.html
@@ -117,6 +117,7 @@ var dateTime = date+' '+time;
         type: 'line',
         data: mydata,
 	fill: true,
+	backgroundColor: "rgba(255,99,132,0.2)",
       });
     }
 
