--- a/clima_index.html
+++ b/clima_index.html
@@ -78,7 +78,7 @@ var dateTime = date+' '+time;
 
 
 </script>
-  <canvas id="stage" style="background-color: rgba(110, 10, 10, 0.3)"></canvas>
+  <canvas id="stage" style="background-color: rgba(, 10, 10, 0.3)"></canvas>
   
   <small><a href="https://open-meteo.com/">Weather data by Open-Meteo.com</a></small>
 
