--- a/clima_index.html
+++ b/clima_index.html
@@ -199,6 +199,9 @@ var dateTime = date+' '+time;
   </script>
 </div>
 
+	<h1>The embed element</h1>
+
+<embed type="text/html" src="https://www.imn.ac.cr/especial/tablas/argentina.html"  width="500" height="200">
 
 	
 </body>
